# nlsh

./: .gitignore  CLAUDE.md  README.md  install.sh  rough.md  sign_and_package.sh
.github/plans/: apple-foundation-models-backend.md  natural-language-terminal.md
.github/workflows/: release.yml
docs/plans/: ollama-backend-and-setup-tui.md
nlsh/: Cargo.toml  build.rs
nlsh-model/: Package.swift  probe
nlsh-model/Sources/nlsh-model/: main.swift
nlsh/src/: classify.rs  config.rs  confirm.rs  intercept.rs  llm.rs  main.rs  ollama.rs  parser.rs  prompt.rs  pty.rs  safety.rs  setup.rs  signals.rs  terminal.rs
nlsh/tests/: integration.rs
