[package]
name = "nlsh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nlsh"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
nix = { version = "0.27", features = ["signal", "term"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
anyhow = "1"
libc = "0.2"
