[package]
name = "nlsh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nlsh"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
nix = { version = "0.27", features = ["signal", "term"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
anyhow = "1"
libc = "0.2"
ureq = "2"
serde_json = "1"
